added Content Creation and Social Media

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <button class="mt-3 button_slide slide_right" onClick="document.getElementById('page-6').scrollIntoView();">
         Introduction
       </button>
-      <p class="mt-3 updated">Latest Updated : 8 Nov 2023</p>
+      <p class="mt-3 updated">Latest Updated : 12 Nov 2023</p>
     </div>
   </div>
 
@@ -103,7 +103,7 @@
 
   <div class="page-skills">
     <div class="container">
-      <div class="row mt-5 mb-5 p-5">
+      <div class="row mt-5 mb-0 p-5" data-aos="fade">
 
         <div class="col-sm-12 col-md-12 col-lg-5 ">
           <h3 class="mb-4">Areas of Expertise</h3>
@@ -121,13 +121,15 @@
           <tr class="d-flex flex-wrap">
             <td class="tech">
               <a href="#program">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/1/18/C_Programming_Language.svg" class="img-fluid" alt="C" />
+                <img src="https://upload.wikimedia.org/wikipedia/commons/1/18/C_Programming_Language.svg"
+                  class="img-fluid" alt="C" />
               </a>
               <br>C&nbsp;
             </td>
             <td class="tech">
               <a href="#program">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Python-logo-notext.svg" class="img-fluid" alt="Python" />
+                <img src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Python-logo-notext.svg" class="img-fluid"
+                  alt="Python" />
               </a>
               <br>Python
             </td>
@@ -145,37 +147,43 @@
             </td>
             <td class="tech">
               <a href="#program">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Dart-logo-icon.svg" class="img-fluid" alt="Dart" />
+                <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Dart-logo-icon.svg" class="img-fluid"
+                  alt="Dart" />
               </a>
               <br>Dart
             </td>
             <td class="tech">
               <a href="#program">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/9/99/Unofficial_JavaScript_logo_2.svg" class="img-fluid" alt="JavaScript" />
+                <img src="https://upload.wikimedia.org/wikipedia/commons/9/99/Unofficial_JavaScript_logo_2.svg"
+                  class="img-fluid" alt="JavaScript" />
               </a>
               <br>JavaScript
             </td>
             <td class="tech">
               <a href="#program">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/d/d9/Node.js_logo.svg" class="img-fluid" alt="Nodejs" />
+                <img src="https://upload.wikimedia.org/wikipedia/commons/d/d9/Node.js_logo.svg" class="img-fluid"
+                  alt="Nodejs" />
               </a>
               <br>Node.js
             </td>
             <td class="tech">
               <a href="#program">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/a/a7/React-icon.svg" class="img-fluid" alt="React" />
+                <img src="https://upload.wikimedia.org/wikipedia/commons/a/a7/React-icon.svg" class="img-fluid"
+                  alt="React" />
               </a>
               <br>React
             </td>
             <td class="tech">
               <a href="#program">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/b/b2/Bootstrap_logo.svg" class="img-fluid" alt="Bootstrap" />
+                <img src="https://upload.wikimedia.org/wikipedia/commons/b/b2/Bootstrap_logo.svg" class="img-fluid"
+                  alt="Bootstrap" />
               </a>
               <br>Bootstrap
             </td>
             <td class="tech">
               <a href="program">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/9/96/Sass_Logo_Color.svg" class="img-fluid" alt="Sass" />
+                <img src="https://upload.wikimedia.org/wikipedia/commons/9/96/Sass_Logo_Color.svg" class="img-fluid"
+                  alt="Sass" />
               </a>
               <br>Sass
             </td>
@@ -187,7 +195,8 @@
             </td>
             <td class="tech">
               <a href="#program">
-                <img src="https://raw.githubusercontent.com/PowerShell/PowerShell/master/assets/ps_black_128.svg" class="img-fluid" alt="Powershell" />
+                <img src="https://raw.githubusercontent.com/PowerShell/PowerShell/master/assets/ps_black_128.svg"
+                  class="img-fluid" alt="Powershell" />
               </a>
               <br>Powershell
             </td>
@@ -199,13 +208,15 @@
             </td>
             <td class="tech">
               <a href="#program">
-                <img src="https://cdn.icon-icons.com/icons2/2415/PNG/512/mongodb_original_wordmark_logo_icon_146425.png" class="img-fluid" alt="MongoDB" />
+                <img src="https://cdn.icon-icons.com/icons2/2415/PNG/512/mongodb_original_wordmark_logo_icon_146425.png"
+                  class="img-fluid" alt="MongoDB" />
               </a>
               <br>MongoDB
             </td>
             <td class="tech">
               <a href="#program">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/2/21/Matlab_Logo.png" class="img-fluid" alt="Matlab" />
+                <img src="https://upload.wikimedia.org/wikipedia/commons/2/21/Matlab_Logo.png" class="img-fluid"
+                  alt="Matlab" />
               </a>
               <br>Matlab
             </td>
@@ -217,19 +228,66 @@
             </td>
             <td class="tech">
               <a href="#program">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/d/d9/P5js_Logo.svg" class="img-fluid" alt="p5js" />
+                <img src="https://upload.wikimedia.org/wikipedia/commons/d/d9/P5js_Logo.svg" class="img-fluid"
+                  alt="p5js" />
               </a>
               <br>p5js
             </td>
             <td class="tech">
               <a href="#program">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/9/93/Amazon_Web_Services_Logo.svg" class="img-fluid" alt="AWS" />
+                <img src="https://upload.wikimedia.org/wikipedia/commons/9/93/Amazon_Web_Services_Logo.svg"
+                  class="img-fluid" alt="AWS" />
               </a>
               <br>AWS
             </td>
             <!-- Add more columns as needed -->
           </tr>
         </table>
+      </div>
+      <div class="row mt-0 mb-3 p-3 pt-0" data-aos="fade">
+        <h3 class="mb-4 text-center">Content Creation and Social Media</h3>
+        <div class="col-sm-12 col-md-12 col-lg-7 mt-2">
+          <h5>Social Media Influence</h5>
+          <div class="row social mt-3 p-3">
+            <div class="col-6"><a href="https://www.tiktok.com/@pokogluay"><img src="./img/gluaytiktok.jpg"></a></div>
+            <div class="col-6"><a href="https://www.instagram.com/gluaymunchkin/"><img src="./img/gluayig.jpg"></a></div>
+          </div>
+          <div class="row social mt-1 p-3 pt-0">
+            <div class="col-6"><a href="https://www.tiktok.com/@pokolukgluay"><img src="./img/pokotiktok.jpg"></a></div>
+            <div class="col-6"><a href="https://www.instagram.com/pkbs.a/"><img src="./img/pokoig.jpg"></a></div>
+          </div>
+
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-5 d-flex flex-column justify-content-center mt-2">
+          <h5 class="mt-3 mb-2">Daily Content & Editing<a href="https://www.tiktok.com/@pokogluay"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                fill="currentColor" class="bi bi-link-45deg" viewBox="0 0 16 16">
+                <path
+                  d="M4.715 6.542 3.343 7.914a3 3 0 1 0 4.243 4.243l1.828-1.829A3 3 0 0 0 8.586 5.5L8 6.086a1.002 1.002 0 0 0-.154.199 2 2 0 0 1 .861 3.337L6.88 11.45a2 2 0 1 1-2.83-2.83l.793-.792a4.018 4.018 0 0 1-.128-1.287z" />
+                <path
+                  d="M6.586 4.672A3 3 0 0 0 7.414 9.5l.775-.776a2 2 0 0 1-.896-3.346L9.12 3.55a2 2 0 1 1 2.83 2.83l-.793.792c.112.42.155.855.128 1.287l1.372-1.372a3 3 0 1 0-4.243-4.243L6.586 4.672z" />
+              </svg></a></h5>
+          <p>Consistently crafting engaging videos and posts, I showcase daily content creation skills. Alongside this,
+            my expertise in video and image editing ensures a polished and visually appealing aesthetic.</p>
+          <h5 class="mt-5 mb-2">Advertising & Collaboration<a href="https://www.tiktok.com/@pokolukgluay/video/7299854990988889349"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+            fill="currentColor" class="bi bi-link-45deg" viewBox="0 0 16 16">
+            <path
+              d="M4.715 6.542 3.343 7.914a3 3 0 1 0 4.243 4.243l1.828-1.829A3 3 0 0 0 8.586 5.5L8 6.086a1.002 1.002 0 0 0-.154.199 2 2 0 0 1 .861 3.337L6.88 11.45a2 2 0 1 1-2.83-2.83l.793-.792a4.018 4.018 0 0 1-.128-1.287z" />
+            <path
+              d="M6.586 4.672A3 3 0 0 0 7.414 9.5l.775-.776a2 2 0 0 1-.896-3.346L9.12 3.55a2 2 0 1 1 2.83 2.83l-.793.792c.112.42.155.855.128 1.287l1.372-1.372a3 3 0 1 0-4.243-4.243L6.586 4.672z" />
+          </svg></a></h5>
+          <p>Successfully collaborated with Buzz Pet Food, creating two video advertisements for their pet food. The
+            engagement surpassed 100k views within two days, demonstrating my ability to create compelling content that
+            resonates with the audience.</p>
+          <h5 class="mt-5 mb-2">Discipline & Consistency<a href="https://www.instagram.com/gluaymunchkin/"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+            fill="currentColor" class="bi bi-link-45deg" viewBox="0 0 16 16">
+            <path
+              d="M4.715 6.542 3.343 7.914a3 3 0 1 0 4.243 4.243l1.828-1.829A3 3 0 0 0 8.586 5.5L8 6.086a1.002 1.002 0 0 0-.154.199 2 2 0 0 1 .861 3.337L6.88 11.45a2 2 0 1 1-2.83-2.83l.793-.792a4.018 4.018 0 0 1-.128-1.287z" />
+            <path
+              d="M6.586 4.672A3 3 0 0 0 7.414 9.5l.775-.776a2 2 0 0 1-.896-3.346L9.12 3.55a2 2 0 1 1 2.83 2.83l-.793.792c.112.42.155.855.128 1.287l1.372-1.372a3 3 0 1 0-4.243-4.243L6.586 4.672z" />
+          </svg></a></h5>
+          <p>Demonstrated discipline through daily content creation and a commitment to consistent posting, contributing
+            to the growth and engagement of my social media platforms.</p>
+        </div>
 
       </div>
     </div>
@@ -419,12 +477,73 @@
       </a>
     </div>
   </div>
-  <div class="page page-6" id="page-6">
-    <div class="container" data-aos="fade">
-      <h3 class="mb-4">Experience</h3>
-      <script type="module" src="https://unpkg.com/@splinetool/viewer@0.9.465/build/spline-viewer.js"></script>
-      <spline-viewer url="https://prod.spline.design/te2W1pak8pThy-ZF/scene.splinecode"></spline-viewer>
+  <div class="page-6" id="page-6">
+    <h3 class="mb-4" data-aos="fade">Experience</h3>
+    <div class="row odd m-3 mb-0 align-content-center text-center" data-aos="fade">
+      <div class="col-sm-12 col-md-12 col-lg-4 text-lg-end">
+        <h2>2021</h2>
+      </div>
+      <div class="col-sm-12 col-md-12 col-lg-7 mt-3 mt-lg-0">
+        <h4 class="p-5 pt-0 pb-2 text-start">Freelance Web Developer - <a href="https://bannkat.com/">Baan K&T
+            Cattery</a></h4>
+        <p class="p-5 pt-0 text-start">In July, I took on a freelance web development project for Baan K&T Cattery,
+          based in Samut Prakan, Thailand. I designed the database, created the website interface for both normal users
+          and admins, and implemented the website using Node.js and MySQL. The project, <a
+            href="https://bannkat.com/">https://bannkat.com/</a>, demonstrated my proficiency in HTML, CSS, Node.js, and
+          MySQL.
+        </p>
+        <h4 class="p-5 pt-0 pb-2 text-start">Teaching Assistant at <a href="https://www.ict.mahidol.ac.th/">Mahidol
+            University</a> (Jan - Jul) - Remote
+        </h4>
+        <p class="p-5 pt-0 text-start pb-0">In the first half of 2021, I served as a Teaching Assistant, remotely
+          assisting the Java programming instructor for the Prep Program 2021 Computer & Problem Solving Course. I
+          graded assignments and provided feedback on student work, strengthening my Java programming skills.
+        </p>
+      </div>
+
     </div>
+    <div class="row even m-3 mt-0 mb-0 align-content-center text-center" data-aos="fade">
+      <div class="col-sm-12 col-md-12 col-lg-4 text-lg-end">
+        <h2>2022</h2>
+      </div>
+      <div class="col-sm-12 col-md-12 col-lg-7 mt-3 mt-lg-0">
+        <h4 class="p-5 pt-0 pb-2 text-start">Teaching Assistant at <a href="https://www.ict.mahidol.ac.th/">Mahidol
+            University</a>, Nakhon Pathom, Thailand (Jan - Dec)
+        </h4>
+        <p class="p-5 pt-0 pb-0 text-start">Throughout the year, I served as a Teaching Assistant at Mahidol University,
+          Nakhon Pathom, Thailand. In the first half of the year, I assisted the Java/Web-programming instructor,
+          enhancing my skills in Cascading Style Sheets (CSS), Java, JavaScript, HTML5, and React.js. In the second
+          half, I continued as a Teaching Assistant, this time assisting the C programming instructor, contributing to
+          my expertise in the C programming language.
+        </p>
+
+      </div>
+    </div>
+    <div class="row odd m-3 mt-0 mb-0 align-content-center text-center" data-aos="fade">
+      <div class="col-sm-12 col-md-12 col-lg-4 text-lg-end">
+        <h2>2023</h2>
+      </div>
+      <div class="col-sm-12 col-md-12 col-lg-7 mt-3 mt-lg-0" id="intern">
+        <h4 class="p-5 pt-0 pb-2 text-start">Research Intern at <a
+            href="https://sites.google.com/view/racharak-lab/members/past-interns?authuser=0">JAIST</a>, Ishikawa, Japan
+        </h4>
+        <p class="p-5 pt-0 text-start">I undertook a two-month research internship at JAIST, Japan, working on the topic
+          of "Explainable Queries in Virtual Knowledge Graph." My research focused on Description Logic, Ontology-based
+          Data Access, and Explainable AI. Under the guidance of Junior Assoc. Prof. Dr. Teeradaj Racharak, I honed my
+          skills in research projects, Description Logic, Virtual Knowledge Graph, and Java.
+        </p>
+        <h4 class="p-5 pt-0 pb-2 text-start">Freelance Web Developer - <a href="https://ochagarden.com/">Ochagarden</a>
+        </h4>
+        <p class="p-5 pt-0 text-start pb-0">In January, I freelanced as a web developer for Ochagarden, a project based
+          in Bangkok City, Thailand. I was responsible for designing the UX and UI of the website, writing both frontend
+          and backend using the ejs engine and Node.js, implementing responsive design, and handling on-page SEO. The
+          website, https://ochagarden.com, showcases my proficiency in Cascading Style Sheets (CSS), Node.js,
+          JavaScript, and HTML5.
+        </p>
+      </div>
+    </div>
+    <!-- <script type="module" src="https://unpkg.com/@splinetool/viewer@0.9.465/build/spline-viewer.js"></script>
+      <spline-viewer url="https://prod.spline.design/te2W1pak8pThy-ZF/scene.splinecode"></spline-viewer> -->
   </div>
   <div class="page-7" id="page-7">
     <h3 class="mb-4" data-aos="fade">Certificate</h3>
