--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
       <h4>Siranut.poko@hotmail.com</h4>
       <h4>+66 85 525 9987</h4>
       <h4>www.pkbsa.com</h4>
-      <h4 id="resume">Find my resume <a href="#">here</a></h4>
+      <h4 id="resume">Find my CV <a href="./img/Siranut_CV.pdf" target="_blank">here</a></h4>
     </div>
     <div>
       <h4>CONNECT WITH ME</h4>
